--- a/src/pages/myproject4/index.html
+++ b/src/pages/myproject4/index.html
@@ -120,6 +120,10 @@
       </div>
     </div>
     <script>
+      const API_FLASK_BASE_URL = import.meta.env.PROD
+        ? '/api-flask'  // 프로덕션: Nginx 프록시 경로
+        : 'http://localhost:5000'  // 개발: 로컬 Python 서버
+
       function previewFile() {
         const fileInput = document.getElementById('fileInput');
         const preview = document.getElementById('preview');
@@ -132,9 +136,10 @@
           modal.style.display = 'block';
           modal.className += " show";
           modal.setAttribute('data-backdrop', 'static');
-          url = "http://localhost:5000/mask";
+          url = `${API_FLASK_BASE_URL}/mask`;
           const data = new FormData();
           data.append("base64Encoded", base64Encoded);
+
           fetch(url, { method: "POST", body: data })
             .then(response => response.json())
             .then(data => {
