fix: firebase 예외 처리

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/src/@iconify/favicon.ico" />
@@ -8,10 +9,11 @@
   <link rel="stylesheet" type="text/css" href="/loader.css" />
   <link ref="manifest" href="manifest.json" />
 </head>
+
 <body>
   <div id="app">
     <div class="loading-logo" style="margin-left: -20px; margin-Top: -45px;">
-      <img src="../../../../src/assets/images/logo_healtyReal.png" alt="로고">
+      <img src="/src/assets/images/logo_healtyReal.png" alt="로고">
     </div>
     <div class=" loading">
       <div class="effect-1 effects"></div>
@@ -30,4 +32,5 @@
       document.documentElement.style.setProperty('--initial-loader-color', primaryColor)
   </script>
 </body>
+
 </html>
